--- a/styles/receitas.css
+++ b/styles/receitas.css
@@ -5,30 +5,28 @@ main {
 .recipes-container {
     display: flex;
     flex-wrap: wrap;
-    padding: 1rem;
-    gap: 1rem;
+    padding: 2rem;
+    gap: 3rem;
     height: 80vh;
     overflow-y: auto;
 }
 
 .recipes-container div {
-    flex-basis: calc(33.333% - 10px);
+    flex-basis: calc(30% - 10px);
     display: flex;
     flex-direction: column;
     background-color: #FFFFFF;
-    gap: 2rem;
 }
 
 .recipes-container h2 {
     font-weight: bold;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    font-size: 2.5rem;
 }
 
-.recipes-container div * {
+.recipes-container div li, p {
     font-size: 1.6rem;
-}
-
-.recipes-container div {
-    padding: 1rem;
 }
 
 .recipes-container div ul li {
